--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,16 @@
+/*global styles*/
 *{
 	margin:0px;
 	padding:0px;
+	font-family: 'Merriweather Sans', sans-serif;
 }
+.scholarship > h3,.experience > h3,.personal-profile > h3,.personal-data > h3{
+	margin:5px 0px;
+	font-size:15px;
+	letter-spacing:2px;
+	color:#6892DC;
+} 
+/*local styles*/
 main{
 	width:100%;
 	height:auto;
@@ -12,9 +21,8 @@ main{
 }
 .main-section{
 	display:grid;
-	outline:solid red;
 	width:800px;
-	height:900px;
+	height:1000px;
 	grid-template-columns:repeat(8,100px);
 	background:#fff;
 	padding-left:20px;
@@ -28,12 +36,11 @@ main{
 	align-items:center;
 }
 .aside-container{
-	outline:solid red;
 	width:80%;
-	height:80%;
+	height:90%;
 	display:flex;
 	flex-direction:column;
-	justify-content:space-between;
+	justify-content:flex-start;
 	align-items:center;
 }
 .image-profile{
@@ -42,14 +49,13 @@ main{
 }
 /*contact list area*/
 .contact-container{
-	outline:solid yellow;
 	width:100%;
 	padding-left:30px;
+	padding-top:30px;
 	box-sizing:border-box;
 	color:#fff;
 }
 .contact-container ul{
-	outline:solid black;
 }
 .contact-container ul li{
 	margin:12px 0px;
@@ -71,18 +77,17 @@ main{
 }
 /*skills list area*/
 .skills-container{
-	outline:solid green;
 	width:100%;
 	padding-left:30px;
+	padding-top:30px;
 	box-sizing:border-box;
 	color:#fff;
 }
-.skills-container ul{
-	outline:solid blue;
+.skills-container .skills{
 	list-style:none;
 	margin-top:10px;
 }
-.skills-container ul li{
+.skills-container .skills li{
 	margin:12px 0px;
 	display:flex;
 	justify-content:flex-start;
@@ -150,26 +155,37 @@ main{
 	outline:solid #fff 2px;
 	border-radius:4px;
 }
+/*actual studying area*/
+.actual-studying{
+	width:100%;
+	padding-left:30px;
+	padding-top:30px;
+	box-sizing:border-box;
+	color:#fff;
+}
+.actual-studying p{
+	font-size:10px;
+	padding:3px 0px;
+}
+.name{
+	height:30px;
+	width:auto;
+}
 /*section*/
 .main-section__container{
-	outline:solid blue;
 	grid-column:4/9;
 	display:flex;
 	justify-content:center;
 	align-items:center;
 }
 .main-section__container-content{
-	outline:solid green;
-	height:80%;
+	height:90%;
 	width:90%;
 }
-.main-section__container-content > h1{
-	font-size:35px;
+.main-section__container-content > h2{
+	font-size:30px;
 	color:#6892DC;
 
-} 
-.main-section__container-content > h2{
-	color:#6892DC;
 } 
 hr{
 	width:60px;
@@ -180,16 +196,10 @@ hr{
 }
 /*personal data area*/
 .personal-data{
-	outline:solid red;
 	width:100%;
-	padding:5px 0px;
+	padding:10px 0px;
 	box-sizing:border-box;
 }
-.personal-data > h3{
-	margin:5px 0px;
-	font-size:20px;
-	color:#6892DC;
-} 
 .personal-data p{
 	color:#6C6C6C;
 	font-weight:bold;
@@ -197,16 +207,10 @@ hr{
 } 
 /*personal profile area*/
 .personal-profile{
-	outline:solid red;
 	width:100%;
 	padding:5px 0px;
 	box-sizing:border-box;
 }
-.personal-profile > h3{
-	margin:5px 0px;
-	font-size:20px;
-	color:#6892DC;
-} 
 .personal-profile p{
 	color:#6C6C6C;
 	font-weight:bold;
@@ -214,14 +218,35 @@ hr{
 }
 /*experience area*/
 .experience{
-	outline:solid red;
 	width:100%;
-	padding:5px 0px;
+	padding:10px 0px;
 	box-sizing:border-box;
 }
-.experience > h3{
-	margin:5px 0px;
-	font-size:20px;
-	color:#6892DC;
-} 
+.item{
+	margin:10px 0px;
+}
+.item h3{
+	color:#6C6C6C;
+}
+.item h6{
+	color:#9F9F9F;
+}
+.item ul{
+	box-sizing:border-box;
+	padding-left:16px;
+	margin-top:5px;
+}
+.item li{
+	color:#6C6C6C;
+	font-weight:bold;
+	font-size:14px;
+	margin:3px 0px;
+}
+/*scholarship-area*/
+.scholarship{
+	width:100%;
+	box-sizing:border-box;
+}
+
+
 
